ChangeLog for ARQ
=================
(the list covers new features and refinements.  See ASF JIRA for details of bugs fixed) 


==== Jena 2.10.0

+ Consolidation of versions numbers.
+ Remove the partial migration support for old-style SPARQL submission update forms.

==== ARQ 2.9.4

+ Deprecate syntax support for SPARQL/Update (the W3C submission - this is not SPARQL 1.1 Update)
  for several cycles of migration support only.  
+ Blank node labels can not be reused across different INSERT DATA operations in the same SPARQL Update Request
  (spec clarification) 
+ JENA-322 : Make jcl-over-slf4 a required dependency
+ JENA-321 : Remove GraphStore.(start|finish)Request() (was previosuly deprecated)
+ Remove deprecated QueryExecutionBase.cancelAllowDrain (see JENA-93)
+ Implement SPARQL-WG decision on BIND : use original semantics. 
+ JENA-294 : improved optimization of sequeneces of OPTIONALs where the grouois only OPTIONAL and an equality filter
+ JENA-298 ResultSetStAX.hasNext() can now be called again after it has returned false
+ JENA-302 Add URIs for all XQuery/Xpath F&O functions for duration accessors
+ JENA-303 Add URIs for all XQuery/Xpath F&O functions where there are SPARQL functions
+ JENA-328 : implement OSGi friendly DatatypeFactory initialisation in NodeValue
+ Support for parsing boolean results from TSV and CSV inputs

==== ARQ 2.9.3

+ Interface DataSource removed after having been deprecated across releases.
  Use Dataset.
+ Remove many deprecated operations in classes Query, UpdateFactory and UpdateRequest.
  Also many internal operations marked deprecated were removed.

==== ARQ 2.9.2

+ Significant speed-up of MINUS queries (JENA-266) : contribution from Paul Gearon (@quoll). 
+ Log warning messages generated by failures in SERVICE clauses now include the URI of the
  service that failed (JENA-269) : suggestion by Claude Warren
+ Support for dynamic function invocation built-in CALL() when using ARQ language

==== ARQ 2.9.1
